# semantics-analysis-system

./: .gitignore  README.md  analyze_article.py  calculate_scores.py  calculate_test_scores.py  compare_scores.py  config.yml  convert_conllu_to_json.py  display_scores.py  ontology_entities.py  parse_habr.py  plot_graph.py  pyproject.toml  run_analysis.py  show_term_class_scores.py  spinner.py  test_sentences.txt  update_sentences.py
data/: relations.conllu
metadata/: dataset_terms_by_class.json  relations.json  term_classes.json  terms.json  terms_by_class.json
prompts/: classify_phrase.txt  classify_word.txt  define_term_class.txt  directed_relation_extraction.txt  normalization.txt  person.txt  relation_extraction.txt  relation_extractionTRY.txt  relation_extraction_with_explanation.txt  resolve_reference.txt  synonyms.txt  term_classification.txt  term_extraction.txt  verification.txt  verify_term.txt
semantics_analysis/: config.py  entities.py  llm_agent.py  ontology_utils.py  phrase_extractor.py  pipelines.py  tokens.py  utils.py  values.py
semantics_analysis/meaning_model/: meaning.py  meaning_model.py  mpnet_meaning_model.py
semantics_analysis/reference_resolution/: llm_reference_resolver.py  reference_resolver.py
semantics_analysis/relation_extraction/: llm_relation_extractor.py  ontology_utils.py  relation_extractor.py
semantics_analysis/relation_extractor/: llm_relation_extractor.py  ontology_utils.py  (+1 more)
tests/: articles_sentences.json  final_rel_scores.md  scores.json  scoresINSTchanged.json  scoresNOINST.json  scores_1_old.json  sentences.json
(+24 files in other folders)
