[tool.poetry]
name = "semantics-analysis"
version = "0.1.0"
description = "System of several deep learning networks responsible for terms extraction, terms classification and relations extraction."
authors = ["aiwannafly"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.38.2"
torch = "^2.2.1"
PyYAML = "^6.0.1"
colorama = "^0.4.6"
inquirer = "^3.2.4"
nltk = "^3.8.1"
rich = "^13.7.1"
termcharts = "^1.1.2"
conllu = "^4.5.3"
matplotlib = "^3.8.3"
spacy = "^3.7.4"
ru_core_news_sm = {url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.7.0/ru_core_news_sm-3.7.0.tar.gz"}
pyvis = "^0.3.2"
bs4 = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
